# ai-lab

./: .gitignore  mnist_extend.ipynb  polynomial_fcfnn.py  pyproject.toml  test.ipynb
assignments/: a10.py  a11.py  a12.py  a13.py  a14.py  a15.py  a16.py  a2.py  a3.py  a4.py  a5.py  a8.py  a9.py
assignments/a6/: make_dataset.py  train_fcfnn_combined.py
assignments/a6/results/: combined_classification_report.txt  dataset_summary.txt
assignments/a7/: pen_pencil_classifier.py
models/: mnist_classifier.py  mnist_cnn.py  vgg_16.py
