[project]
name = "ai-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gdown>=5.2.0",
    "keras>=3.11.2",
    "matplotlib>=3.10.5",
    "nbconvert>=7.16.6",
    "opencv-python>=4.13.0.92",
    "pip>=25.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tensorflow>=2.19.0",
]
